!Important! fix to Modal z-index

--- a/css/ogp-style.less
+++ b/css/ogp-style.less
@@ -1659,6 +1659,13 @@ table {
     background-color: @light-grey;
 }
 
+.modal {
+    z-index: 1000050;
+}
+.modal-backdrop{
+    z-index: 1000040;
+}
+
 //FULL SCREEN BROWSE PAGE
 body, html, #main, .main-container {
     height: 100%;
